--- a/gomoku.html
+++ b/gomoku.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="gomoku.css">
 </head>
 <body>
-    <div class="container">
-
+    <div class="left">
+        <div class="container"></div>
+    </div>
+    <div class="right">
+        <div class="upperRight">
+            <div class="back">
+                <button class="backButton"></button>
+            </div>
+            <div class="timer"></div>
+            <div class="currentPlayer"></div>
+        </div>
+        <div class="lowerRight">
+            <div class="player1"></div>
+            <div class="player2"></div>
+        </div>
     </div>
     <script src="gomoku.js"></script>
 </body>
