--- a/gomoku.html
+++ b/gomoku.html
@@ -15,7 +15,12 @@
             <div class="back">
                 <button class="backButton"></button>
             </div>
-            <div class="timer"></div>
+            <div class="reset">
+                <button class="resetButton"></button>
+            </div>
+            <div class="timer">
+                Time Left :<div class="timerValue"></div> s
+            </div>
             <div class="currentPlayer"></div>
         </div>
         <div class="lowerRight">
