--- a/gomoku.html
+++ b/gomoku.html
@@ -19,9 +19,9 @@
                 <button class="resetButton"></button>
             </div>
             <div class="timer">
-                Time Left :<div class="timerValue"></div> s
+                Time Left : <div class="timerValue"> </div> s
             </div>
-            <div class="currentPlayer"></div>
+            <div class="currentPlayer">Current Player : Black</div>
         </div>
         <div class="lowerRight">
             <div class="player1"></div>
